--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,21 @@
 <ion-view view-title="Home">
   <ion-content>
         <div class="branding">
-            <img ng-src="img/cook.jpg" alt="James Cook">
-            <div class="tagline"><h2>My Ward My Handbook </h2></br>
-              <h5>2016 ENT UK</h5>
+          <div class = 'tagline'>
+            <h3>Web version - try out your data</h3>
+            <br>
+            <br>
+          </div>
+
+            <img ng-src="img/entuk_logo.png" alt="ENT UK logo">
+
+          </div>
+      <div class = "branding">
+            <div class="tagline"><h2>Lester's ENT UK Handbook </h2></br>
+              <h3>2016 ENT UK</h3>
               <h6>and</h6>
-            <h5>Mr Shane Lester</5h>
-            </div>
-            <p>Helping you learn</p>
+            <h3>Mr Shane Lester</h3>
         </div>
+      </div>
   </ion-content>
 </ion-view>
